Fix screenshots on mobile

--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -37,9 +37,11 @@
     img {
       min-width: 90%;
       max-width: 90%;
-      position: relative;
-      left: -10%;
-      opacity: 0;
+      @media(min-width: $bp-iphone) {
+        position: relative;
+        left: -10%;
+        opacity: 0;
+      }
     }
 
     &.panel-screenshot--right {
